# event_source

./: .travis.yml  Cargo.toml  todo.txt
src/: aggregate.rs  client.rs  command.rs  commit.rs  dispatch.rs  events.rs  lib.rs  projection.rs
src/server/: aggregate.rs  dispatch.rs  http_server.rs  mod.rs  store.rs
src/store/: dynamodb.rs  mod.rs  sqlite.rs
