[package]
name = "event_source"
version = "0.1.0"
authors = ["Duane Bailey <bailey.d.r@gmail.com>"]

[dependencies]
bytes = "^0.5.4"
serde = "~1.0.106"
serde_json = "~1.0.51"
serde_derive = "~1.0.106"
either = "1.5.3"
dotenv = "0.15.0"
warp = "~0.2.2"
futures = "~0.3.4"
log = "0.4.8"
chashmap = "2.2.2"
pretty_env_logger = "~0.4.0"
tokio-timer = "~0.2.13"
hyper = "~0.13.5"
tokio = "~0.2.18"
rusoto_core = "~0.43.0"
rusoto_dynamodb = "~0.43.0"

[dependencies.chrono]
version = "~0.4.11"
features = ["serde"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4", "serde"]

[dependencies.rusqlite]
version = "~0.21.0"
features = ["bundled", "chrono", "serde_json", "trace"]