[package]
name = "event_source"
version = "0.1.0"
authors = ["Duane Bailey <bailey.d.r@gmail.com>"]

[features]
default = []

dynamo = ["rusoto_dynamodb", "rusoto_core", "tokio", "futures"]
sqlite = ["rusqlite"]

httpd = ["log", "dotenv", "warp", "futures", "tokio-timer", "hyper", "tokio"]

[dependencies]
bytes = "^0.5.4"
serde = "~1.0.106"
serde_json = "~1.0.51"
serde_derive = "~1.0.106"
pretty_env_logger = "~0.4.0"
either = "1.5.3"
chashmap = "2.2.2"

log = { version = "0.4.8", optional = true }
dotenv = { version = "0.15.0", optional = true }
warp = { version = "~0.2.2", optional = true }
futures = { version = "~0.3.4", optional = true }
tokio-timer = { version = "~0.2.13", optional = true }
hyper = { version = "~0.13.5", optional = true }
tokio = { version = "~0.2.18", optional = true }

rusoto_core = { version = "~0.43.0", optional = true }
rusoto_dynamodb = { version = "~0.43.0", optional = true }

[dependencies.chrono]
version = "~0.4.11"
features = ["serde"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4", "serde"]

[dependencies.rusqlite]
version = "~0.21.0"
features = ["bundled", "chrono", "serde_json", "trace"]
optional = true