[package]
name = "event_source"
version = "0.1.0"
authors = ["Duane R Bailey <bailey.d.r@gmail.com>"]

[features]
default = []

dynamo = ["rusoto_dynamodb", "rusoto_core", "tokio", "futures"]
sqlite = ["rusqlite"]

httpd = ["log", "dotenv", "warp", "futures", "tokio-timer", "hyper", "tokio"]

[dependencies]
bytes = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
pretty_env_logger = "*"
either = "*"
chashmap = "*"

log = { version = "0.4.8", optional = true }
dotenv = { version = "0.15.0", optional = true }
warp = { version = "~0.2.2", optional = true }
futures = { version = "~0.3.4", optional = true }
tokio-timer = { version = "~0.2.13", optional = true }
hyper = { version = "~0.13.5", optional = true }
tokio = { version = "~0.2.18", optional = true }

rusoto_core = { version = "~0.43.0", optional = true }
rusoto_dynamodb = { version = "~0.43.0", optional = true }

[dependencies.chrono]
version = "*"
features = ["serde"]

[dependencies.uuid]
version = "*"
features = ["v4", "serde"]

[dependencies.rusqlite]
version = "*"
features = ["bundled", "chrono", "serde_json", "trace"]
optional = true